# BrentDekker

./: .gitignore  LICENSE  README.md
Data/TestSet_0000/Problems/: problems.xml
ProblemMaker/: CMakeLists.txt
ProblemMaker/GeneratorFiles/: HelperUtils.xml  Polynomial.xml
ProblemMaker/ProblemMaker/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
ProblemMaker/ProblemMakerLib/: CMakeLists.txt  HelperUtils.cpp  HelperUtils.h  Polynomial.cpp  Polynomial.h
ProblemMaker/ProblemMakerTests/: CMakeLists.txt
ProblemMaker/ProblemMakerTests/TestHelpers/: TestUtils.cpp  TestUtils.h
ProblemMaker/ProblemMakerTests/Tests/: Example_Tests.cpp  Polynomial_Tests.cpp
ProblemMaker/Resources/: config.xml
TestRunner/: CMakeLists.txt
TestRunner/GeneratorFiles/: Bisection.xml  BrentDekker.xml  EvalBase.xml  LoaderUtils.xml  PolyProblem.xml  Problem.xml  ProblemResult.xml  Secant.xml  SolverBase.xml
TestRunner/TestRunner/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
TestRunner/TestRunnerLib/: Bisection.cpp  Bisection.h  BrentDekker.cpp  BrentDekker.h  CMakeLists.txt  EvalBase.h  LoaderUtils.cpp  LoaderUtils.h  PolyProblem.cpp  PolyProblem.h  Problem.h  ProblemBase.h  ProblemResult.h  Secant.cpp  Secant.h  SolverBase.h
TestRunner/TestRunnerTests/: CMakeLists.txt
TestRunner/TestRunnerTests/Tests/: Bisection_Tests.cpp  BrentDekker_Tests.cpp  Example_Tests.cpp  PolyProblem_Tests.cpp  Secant_Tests.cpp
